# Restaurant

./: .clang-format  .gitignore  CMakeLists.txt
admin_client/: AdministrationWidget.cpp  AdministrationWidget.hpp  CMakeLists.txt  Charts.cpp  Charts.hpp  DiagrammWidget.cpp  DiagrammWidget.hpp  FoodModel.cpp  FoodModel.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  OrderDetailsWidget.cpp  OrderDetailsWidget.hpp  OrdersModel.cpp  OrdersModel.hpp  RequestedFoodModel.cpp  RequestedFoodModel.hpp  WorkspaceWidget.cpp  WorkspaceWidget.hpp  main.cpp
admin_client.test/: CMakeLists.txt  foodmodel_test.cpp  model_test.cpp  ordermodel_test.cpp
client_lib/: CMakeLists.txt  Client.cpp  Client.hpp  Message.cpp  Message.hpp  Protocol.cpp  Protocol.hpp
client_lib.test/: CMakeLists.txt  protocol_test.cpp
communication_lib/: CMakeLists.txt  Client.cs  Communication.cs  ComplateFoodReplyMesage.cs  ComplateFoodRequestMesage.cs  CompleteFoodReplyMessage.cs  CompleteFoodRequestMessage.cs  FoodChangeReplyMessage.cs  FoodChangeRequestMessage.cs  FoodListReplyMessage.cs  FoodListRequestMessage.cs  IClient.cs  ICommunication.cs  LoginReplyMessage.cs  LoginRequestMessage.cs  Message.cs  NotificationOrdersMessage.cs  OrderArrivedReplyMessage.cs  OrderArrivedRequestMessage.cs  OrderReplyMessage.cs  OrderRequestMessage.cs  OrderStatusChangeReplyMessage.cs  OrderStatusChangeRequestMessage.cs  PayReplyMessage.cs  PayRequestMessage.cs  ProtocolReader.cs  communication_lib.csproj
communication_lib.IntegrationTest/: CMakeLists.txt  IntegarionTests.cs  communication_lib.IntegrationTest.csproj
communication_lib.test/: CMakeLists.txt  ProtocolReaderTests.cs  ProtocolWriterTest.cs  ReaderWriterTests.cs  communication_lib.test.csproj
communication_lib/Implementation/: MessageHeader.cs
packaging/: Admin.qs  Customer.qs  Server.qs  vc_redist.qs
restaurant-app/: CMakeLists.txt  CartModel.cpp  CartModel.hpp  EndWidget.cpp  EndWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWidget.cpp  MainWidget.hpp  MenuModel.cpp  MenuModel.hpp  Model.cpp  Model.hpp  OrderModel.cpp  OrderModel.hpp  OrderWidget.cpp  OrderWidget.hpp  PayWidget.cpp  PayWidget.hpp  WelcomeWidget.cpp  WelcomeWidget.hpp  main.cpp
restaurant-app.test/: CMakeLists.txt  model_test.cpp
restaurant-server.test/: AdminClientTest.cs  CMakeLists.txt  CustomerClientTest.cs  PendingClientTest.cs  TestHelper.cs  restaurant-server.test.csproj
server/: AdminClient.cs  CMakeLists.txt  ClientConnection.cs  ConnectionHandler.cs  CustomerClient.cs  IConnectionHandler.cs  IModel.cs  Model.cs  PendingClient.cs  Program.cs  RestaurantConnectionHandler.cs  RestaurantRequestHandler.cs  restaurant-server.csproj
server/Migrations/: 20200506195915_InitialCreate.Designer.cs  20200506195915_InitialCreate.cs  20200506200134_AddDefaultAdmin.Designer.cs  20200506200134_AddDefaultAdmin.cs  20200506201712_UserNameUnique_FoodNameUnique.Designer.cs  20200506201712_UserNameUnique_FoodNameUnique.cs  20200507022101_Order_UseDateTimeOffset.Designer.cs  20200507022101_Order_UseDateTimeOffset.cs  20200507135403_AddToOrderStatus_PayIntentStatus.Designer.cs  20200507135403_AddToOrderStatus_PayIntentStatus.cs  RestaurantContextModelSnapshot.cs
server/Persistence/: RestaurantContext.cs
